# agent-memory-system

./: .gitignore  README.md  __init__.py  pyproject.toml
agents/: __init__.py  base.py  conflict.py  orchestrator.py  recency.py  relevance.py  synthesis.py
configs/: agents_config.yaml  memory_config.yaml  retrieval_config.yaml
evaluation/: __init__.py  baselines.py  benchmarks.py  datasets.py  metrics.py
examples/: customer_support.py  personal_assistant.py  quickstart.py  research_assistant.py
integrations/: __init__.py  langchain_retriever.py  llamaindex_retriever.py
memory/: __init__.py  indexer.py  schema.py  store.py  temporal.py
notebooks/: 01_memory_operations.ipynb  02_agent_reasoning.ipynb  03_conflict_resolution.ipynb  04_vs_naive_rag.ipynb  05_scaling_analysis.ipynb
reasoning/: __init__.py  chain.py  judge.py  prompts.py
retrieval/: __init__.py  candidate.py  context_builder.py  pipeline.py
tests/: __init__.py  test_agents.py  test_conflict.py  test_memory_store.py  test_retrieval.py
